--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "^3.3.3",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.2.6",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
